frontend/src/assets/global.scss
// TODO: Reconcile with common.module.scss
@tailwind base;
@tailwind components;

@layer components {
  .only-print {
    @media not print {
      display: none !important;
    }
  }

  .no-print {
    @media print {
      display: none !important;
    }
  }
}

@mixin screenWidthAbove($width) {
  @media (min-width: $width) {
    @content;
  }
}

@mixin screenWidthBelow($width) {
  @media (max-width: $width) {
    @content;
  }
}

@mixin screenHeightAbove($height) {
  @media (min-height: $height) {
    @content;
  }
}

@mixin screenHeightBelow($height) {
  @media (max-height: $height) {
    @content;
  }
}

@mixin screenSizeAbove($width, $height: null) {
  @if $height == null {
    $height: $width;
  }
  @media (min-width: $width) and (min-height: $height) {
    @content;
  }
}

$tablet: 480px;
$small: 768px;
$large: 1024px;
$xlarge: 1280px;

$tabletHeight: 360px;
$smallHeight: 480px;
$largeHeight: 768px;
$xlargeHeight: 1024px;

$navbarHeight: 3.2rem;

@font-face {
  font-family: monospace;
  src: local("Roboto Mono");
}

@font-face {
  font-family: ui-monospace;
  src: local("Roboto Mono");
}

:root {
  // Font settings
  font-size: 12px;

  // All these fonts are here so I can switch when I get bored of the current one
  font-family: "Secular One", "Kanit", "Play", "Mitr", "Hammersmith One",
    "Roboto Mono", Helvetica, sans-serif;

  @include screenSizeAbove($small) {
    font-size: 14px;
  }

  @include screenSizeAbove($large, $small) {
    font-size: 15px;
  }

  @include screenSizeAbove($xlarge, $large) {
    font-size: 16px;
  }

  // Theme colors

  --color-primary: #5f58ff;
  --color-primary-rgb: 95, 88, 255;
  --color-secondary: #99a3ff;
  --color-secondary-rgb: 153, 163, 255;
  --color-tertiary: #c2185b; // TODO -rgb variant
  --color-background-0: black;
  --color-background-0-rgb: 0, 0, 0;
  --color-background-1: #151726;
  --color-background-1-rgb: 21, 23, 38;
  --color-background-2: #0e0f17;
  --color-background-2-rgb: 14, 15, 23;
  --color-text: #d2dcf9;
  --color-text-rgb: 210, 220, 249;
  --color-text-pale: #999;
  --color-text-pale-rgb: 153, 153, 153;

  @mixin lightThemeColors() {
    --color-primary: #303f9f;
    --color-primary-rgb: 48, 63, 159;
    --color-secondary: #673ab7;
    --color-secondary-rgb: 103, 58, 183;
    --color-background-0: white;
    --color-background-0-rgb: 255, 255, 255;
    --color-background-1: #eeeeee;
    --color-background-1-rgb: 238, 238, 238; // TODO
    --color-background-2: #dddddd;
    --color-background-2-rgb: 221, 221, 221; // TODO
    --color-text: black;
    --color-text-rgb: 0, 0, 0;
    --color-text-pale: #303030;
    --color-text-pale-rgb: 48, 48, 48;
  }

  &[data-theme="light"] {
    @include lightThemeColors();
  }

  @media print {
    @include lightThemeColors();
  }

  color: var(--color-text);
}

a {
  display: inline-block;
  color: rgba(var(--color-secondary-rgb), 0.9);
  text-decoration: none;
  transition: transform ease-in-out 0.2s;
  pointer-events: auto;

  &:hover {
    transform: scale(1.02);
    color: var(--color-primary);
  }
}

h1,
h2,
h3,
h4,
h5,
h6 {
  text-align: center;
  user-select: none;
  margin: 0;
}

h1 {
  font-size: 2em;
  @include screenWidthBelow($tablet) {
    font-size: 1.8em;
  }
}

h2 {
  font-size: 1.4em;
}

h3 {
  font-size: 1.1em;
}

pre {
  margin: 0;
}

hr {
  margin: 0;
  width: 100%;
}

// Disable all scroll bars everywhere
* {
  &::-webkit-scrollbar {
    background: transparent; // Chrome/Safari/Webkit
    width: 0;
  }

  & {
    scrollbar-width: none; // Firefox
    -ms-overflow-style: none; // IE 10+
  }
}

